[package]
name = "rapid-xml"
version = "0.1.0"
authors = ["Michal Srb <michalsrb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btoi = "0.4.2"
tuple_utils = "0.3.0"
paste = "1.0.1"
multiversion = "0.6.1"
serde = "1.0.116"
slice-deque = "0.3.0"
twoway = "0.2.1"
inlinable_string = "0.1.11"
num_enum = "0.5.1"

[dev-dependencies]
serde_derive = "1.0.116"

[features]
# Enable this feature to enable benchmarks using the (currently) unstable
# test::Bencher.
bencher = []
build_dfa = []

[[bin]]
path = "src/build_dfa.rs"
name = "build_dfa"
required-features = ["build_dfa"]
