[package]
name = "rapid-xml"
version = "0.2.3"
authors = ["Michal Srb <michalsrb@gmail.com>"]
edition = "2021"
license = "MIT"
description = "XML parser with focus on speed and deserialization to serde"
homepage = "https://github.com/tvbeat/rapid-xml"
repository = "https://github.com/tvbeat/rapid-xml"
keywords = ["xml", "parser", "serde"]
categories = ["parser-implementations"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
]

[dependencies]
btoi = "0.4.2"
tuple_utils = "0.3.0"
paste = "1.0.3"
multiversion = "0.6.1"
serde = "1.0.117"
slice-deque = "0.3.0"
twoway = "0.2.1"
inlinable_string = "0.1.12"
num_enum = "0.5.1"

[dev-dependencies]
serde_derive = "1.0.117"

[features]
# Enable this feature to enable benchmarks using the (currently) unstable
# test::Bencher.
bencher = []
build_dfa = []

[[bin]]
path = "src/build_dfa.rs"
name = "build_dfa"
required-features = ["build_dfa"]
